# recipe-robot

./: .dockerignore  .example.env  .gitignore  .surrealdb  Cargo.toml  README.md  docker-compose.yml  dockerfile  tailwind.config.js
.github/workflows/: ci.yml
db_data/setup/migrations/: 20241128_003052_init.surql
db_data/setup/migrations/down/: 20241128_003052_init.surql
server/: .example.env  .surrealdb  Cargo.toml  docker-compose.yml  dockerfile  dockerfile_surreal
server/db_data/setup/migrations/: 20241128_003052_init.surql  20241202_210440_ingredient_quantity_float.surql
server/db_data/setup/migrations/down/: 20241128_003052_init.surql  20241202_210440_ingredient_quantity_float.surql
server/src/: ai.rs  db.rs  error.rs  lib.rs  main.rs  prelude.rs  util.rs
server/src/handler/: auth.rs  ingredient.rs  mod.rs
server/src/model/: cash_flow.rs  ingredient.rs  item.rs  mod.rs
src/: ai.rs  app.rs  db.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  prelude.rs
src/api/: ai.rs  auth.rs  db.rs  ingredient.rs  mod.rs  shopping_list.rs
src/api/handler/: mod.rs
src/components/: alternative_items.rs  change_recipe_button.rs  find_ingredients_button.rs  loading_indicator.rs  mod.rs  recipe_input.rs  reset_recipe_button.rs  shopping_list.rs  shopping_list_item.rs  vendor_selection.rs
src/handler/: auth.rs
src/model/: ingredient.rs  item.rs
src/shopping_list/: ingredient.rs  mod.rs
src/views/: home.rs  join.rs  login.rs  logout.rs  mod.rs
style/: main.scss
web/: .dockerignore  .env  .eslintignore  .gitignore  bun.lockb  dockerfile  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/src/: App.svelte  api.svelte  icons.svelte  main.ts  store.svelte  theme.svelte
web/src/components/: Error.svelte  Ingredient.svelte  LoadingSpinner.svelte  Me.svelte
web/src/routes/: Home.svelte  Join.svelte  Login.svelte
web/src/style/: main.scss
