[package]
name = "recipe_robot"
version = "0.1.0"
edition = "2021"

[dependencies]
# server
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "timeout"] }

# error handling
# thiserror = "1"
anyhow = "1.0.79"

# logging
log = "0.4.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# auth
jsonwebtoken = { version = "9.3.0" }
bcrypt = "0.16.0"

# db
surrealdb = { version = "2.1.2" }
surrealdb-migrations = { version = "2.0.0" }

# utils 
dotenv = { version = "0.15.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.12.2", default-features = false, features = [
  "rustls-tls",
  "json",
] }
openai = { version = "1.0.0-alpha.16", default-features = false, features = [
  "rustls",
] }
uuid = { version = "1.11", features = ["serde", "v4"] }
regex = "1.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
time = "0.3"
rand = "0.8.5"
random_name_generator = "0.3.6"
async-trait = "0.1.83"
